--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="main.js"></script>
+    <script src="valid.js"></script>
     <title>Dobrocsi Kornél</title>
 </head>
 <body>
-    <form name="ValidTeszt">
+    <form name="ValidTeszt" onsubmit="return validateform()"> 
         <div class="sor">
             <label for="vnev">vnev</label>
-            <input type="text" name="vnev" id="vnev">
+            <input type="text" name="vnev" id="vnev" pattern="[A-Z][A-Za-z ]{3}">
         </div>
         <div class="sor">
             <label for="knev">knev</label>
-            <input type="text" name="knev" id="knev">
+            <input type="text" name="knev" id="knev" pattern="[A-Z][A-Za-z ]{3}">
         </div>
         <div class="sor">
             <label for="jelszo1">jelszo1</label>
-            <input type="password" name="jelszo1" id="jelszo1">
+            <input type="password" name="jelszo1" id="jelszo1" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
         </div>
         <div class="sor">
             <label for="jelszo2">jelszo2</label>
