--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <form name="ValidTeszt" onsubmit="return validateform()"> 
         <div class="sor">
             <label for="vnev">vnev</label>
-            <input type="text" name="vnev" id="vnev" pattern="[A-Z][A-Za-z ]{3}">
+            <input type="text" name="vnev" id="vnev" pattern="[A-Z][A-Za-z ]{3,}">
         </div>
         <div class="sor">
             <label for="knev">knev</label>
-            <input type="text" name="knev" id="knev" pattern="[A-Z][A-Za-z ]{3}">
+            <input type="text" name="knev" id="knev" pattern="[A-Z][A-Za-z ]{3,}">
         </div>
         <div class="sor">
             <label for="jelszo1">jelszo1</label>
@@ -24,7 +24,7 @@
         </div>
         <div class="sor">
             <label for="jelszo2">jelszo2</label>
-            <input type="password" name="jelszo2" id="jelszo2">
+            <input type="password" name="jelszo2" id="jelszo2" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
         </div>
         <div class="sor">
             <input type="submit" name="kuldes" id="kuldes" value="kuldes">
